syntax = "proto3";

import "google/protobuf/empty.proto";
import "valid_ingredient.proto";

option go_package = "github.com/dinnerdonebetter/backend/internal/proto/services";

service DinnerDoneBetter {
  // Fetches a random valid ingredient
  rpc GetRandomValidIngredient (google.protobuf.Empty) returns (dinnerdonebetter.protobuf.ValidIngredient) {}
}